move frontend field blocking list to YAML

--- a/_config/events.yml
+++ b/_config/events.yml
@@ -8,6 +8,14 @@ Events:
   pagination_type: static
   page_search_type: refine
   enable_public_add_event: true
+  block_frontend_fields:
+    - ListingSummaryToggle
+    - Metadata
+    - URLSegment
+    - HideStartAndEndTimes
+    - HideDatePosted
+    - MenuTitle
+    - EnableRegistrationPage
   
   RequiredEventFields:
     FullName:
