--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 		"silverstripe/cms" : "~3.1.13",
 		"silverstripe-modules/versionedmodeladmin" : "1.0.*",
 		"silverstripe-modules/listingsummary" : "*",
-		"micschk/silverstripe-excludechildren" : "1.1",
+		"micschk/silverstripe-excludechildren" : "*",
 		"tractorcow/silverstripe-colorpicker" : "dev-master#931454b672a5d9e273aebb6da49c369ee90485f0",
 		"silverstripe/timedropdownfield" : "dev-master#bda13f4aa9c703a48a18db7b11b98aa0e6a51e08",
 		"silverstripe-australia/addressable" : "1.0.0",
