user lumberjack instead of excludechildren

--- a/_config/events.yml
+++ b/_config/events.yml
@@ -41,3 +41,10 @@ LeftAndMain:
 EditableFormField:
   extensions:
     - EventsEditableFormFieldExtension
+
+EventsPage:
+  extensions:
+    - 'Lumberjack'
+
+CalendarEvent:
+  show_in_sitetree: false
