--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 		"silverstripe/cms" : ">=3.4.0",
 		"silverstripe-modules/versionedmodeladmin" : "*",
 		"silverstripe-modules/listingsummary" : "*",
-		"micschk/silverstripe-excludechildren" : "*",
+		"silverstripe/lumberjack" : ">=1.3.0",
 		"tractorcow/silverstripe-colorpicker" : "3.0.0",
 		"silverstripe/timedropdownfield" : "*",
 		"silverstripe-australia/addressable" : "*",
